--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+udr-plugin (0.9.2-1) unstable; urgency=medium
+
+  * Bugfix version
+
+ --  Petr Jelinek <petr@2ndquadrant.com>  Fri, 24 Jul 2015 13:28:05 +0200
+
 udr-plugin (0.9.1-1) unstable; urgency=medium
 
   * Bugfix version
