--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+udr-plugin (0.9.3-1) unstable; urgency=medium
+
+  * Bugfix version
+
+ --  Petr Jelinek <petr@2ndquadrant.com>  Fri, 23 Oct 2015 01:23:40 +0200
+
 udr-plugin (0.9.2-1) unstable; urgency=medium
 
   * Bugfix version
