--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+postgresql-bdr-9.4 (9.4.5-1) unstable; urgency=medium
+
+   * New upstream version.
+
+ -- Petr Jelinek <petr@2ndquadrant.com>  Fri, 23 Oct 2015 01:25:18 +0200
+
 postgresql-bdr-9.4 (9.4.4-1) unstable; urgency=medium
 
    * New upstream version.
