--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+postgresql-bdr-9.4 (9.4.6-1) unstable; urgency=medium
+
+   * New upstream version.
+
+ -- Petr Jelinek <petr@2ndquadrant.com>  Tue, 22 Mar 2016 14:30:54 +0100
+
 postgresql-bdr-9.4 (9.4.5-2) unstable; urgency=medium
 
    * Workaround for postgresql-common 171+.
