--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+postgresql-bdr-9.4 (9.4.7-1) unstable; urgency=medium
+
+   * New upstream version.
+
+ -- Petr Jelinek <petr@2ndquadrant.com>  Tue, 29 Mar 2016 11:06:05 +0200
+
 postgresql-bdr-9.4 (9.4.6-1) unstable; urgency=medium
 
    * New upstream version.
